fix dark mode colors

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -338,7 +338,6 @@ header a, header button {
     }
 }
 
-
 /*original code*/
 /* Footnotes */
 .footnotes {
@@ -391,6 +390,10 @@ body.reader-mode {
     color: #e0e0e0;
 }
 
+.dark-mode h1 {
+    color: #e0e0e0;
+}
+
 .dark-mode a {
     color: rgb(190, 190, 190);
 }
@@ -434,7 +437,7 @@ body.reader-mode {
 }
 
 .dark-mode .taxonomy-box a {
-    color: var(--link-color);            /* Using the main link color */
+    color: #333;     
 }
 
 .dark-mode .taxonomy-box a:hover {
@@ -492,8 +495,6 @@ body.reader-mode {
     margin-bottom: 0px;
     font-size: 2rem;
 }
-
-
 
 /* Warning */
 .warning {
